Project

General

Profile

Actions

Bug #63509

closed

osd/scrub: some replica states specified incorrectly

Added by Ronen Friedman 6 months ago. Updated 1 day ago.

Status:
Resolved
Priority:
Normal
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

ReplicaActiveOp sub-states are specified with the wrong parent attribute.

Actions #1

Updated by Ronen Friedman 6 months ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 54460
Actions #2

Updated by Radoslaw Zarzynski 6 months ago

Introduced in commit 31af98f52d9749401b1b2b9afff9a0620b68cec8 (Wed Feb 22 21:04:17 2023 -0800) which is not in reef. No need for backporting.

Actions #3

Updated by Ronen Friedman 1 day ago

54460 was made obsolete by https://github.com/ceph/ceph/pull/54482.

Actions #4

Updated by Ronen Friedman 1 day ago

  • Status changed from Fix Under Review to Resolved
  • Pull request ID changed from 54460 to 54482
Actions

Also available in: Atom PDF