osd/scrub: fix replica sub-states

The replica states hierarchy was not properly specified.
Fixing it here.
Also - removing the (never yet invoked) call to
replica_handling_done() in the replica state machine.
That call must precede the reply to the Primary.

Fixes: https://tracker.ceph.com/issues/63509

Signed-off-by: Ronen Friedman <rfriedma@redhat.com>